<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/convertFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/convert_from_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/amount_edit_text"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertFromTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"
        app:columnCount="2"
        app:orientation="horizontal"
        app:rowCount="6">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tspTextView"
            android:text="@string/tsp_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cupTextView"
            android:text="@string/cup_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tbsTextView"
            android:text="@string/tbs_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ozTextView"
            android:text="@string/oz_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/kgTextView"
            android:text="@string/kg_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quartTextView"
            android:text="@string/quart_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/gallonTextView"
            android:text="@string/gallon_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poundTextView"
            android:text="@string/lbs_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/mlTextView"
            android:text="@string/ml_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/literTextView"
            android:text="@string/liter_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/mgTextView"
            android:text="@string/mg_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="left|top"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pintTextView"
            android:text="@string/pint_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />


    </androidx.gridlayout.widget.GridLayout>

</RelativeLayout>